Updated project one

--- a/project_1.html
+++ b/project_1.html
@@ -48,14 +48,14 @@
 								<p>Tools: Tableau</p>
 							</header>
 							<!--<div class="image main"><img src="images/analytics 1.jfif" alt="" /></div> -->
-							<p><strong>Introduction</strong></p>
-							<p>Amazon is the word's largest retailer offering a wide range of products, services 
-								and digital content. It also provides cloud computing services through amazon web 
-								services, which is the largest cloud infrastructure platform in the world. 
-								Amazon depends on data for making constructive and strategic decisions. This 
-								project has used Amazon Sales data for years from 2010 to 2017 to come up with 
-								an interactive Tableau Dashbord that captures insights and trends about Amazon 
-								sales in African countries.</p>
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
+							<h3>Introduction</h3>
+							<p>Amazon is the world’s largest online retailer, offering a wide range of products,
+								 services, and digital content. It also provides cloud computing services through Amazon
+								  Web Services (AWS), the largest cloud infrastructure platform globally. Amazon relies 
+								  heavily on data-driven decision-making to optimize operations and increase profitability.
+								This project leverages Amazon sales data from 2010 to 2017 to develop an interactive Tableau dashboard that uncovers key insights and trends regarding Amazon’s sales performance in African countries.
+								</p>
 							<!--<p><strong>Problem Statement</strong></p>
 							<p>For our special problem, we were interested in how these different characteristics relate
 								to the total medical cost. We constructed the best possible predictive model 
@@ -66,14 +66,15 @@
 								<li>-</li>
 								<li>-</li>
 							</ol></p>-->
-							<p><strong>Questions</strong></p>
-							<p>The Dashbord has answered the following data questions:
-							<ol>
-								<li>What is the most profitable Sales Channel in Africa?</li>
-								<li>Which African country created high revenue for Amazon during the period under study?</li>
-								<li>Which items fetched high unit price among all items ordered in Africa during the period of study?</li>
-								<li>Which year sold more units than any other year in the period of study?</li>
-							</ol></p>
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
+							<h3>Key Data Questions  Addressed</h3>
+							<p>The Tableau dashboard provides insights into the following key questions:</p>
+							<ul>
+								<li>What is the most profitable sales channel in Africa?</li>
+								<li>Which African country generated the highest revenue for Amazon during the study period?</li>
+								<li>Which product category had the highest unit price among all items sold in Africa?</li>
+								<li>Which year recorded the highest number of units sold?</li>
+							</ul>
 							<!--<p><strong>Methodology</strong></p>
 							<p>For our special problem, we were interested in how these different characteristics relate
 								to the total medical cost. We constructed the best possible predictive model 
@@ -84,21 +85,19 @@
 								<li>-</li>
 								<li>-</li>
 							</ol></p>-->
-							<p><strong>Summary of Results</strong></p>
-							<p>The most profitable Sales Channel has been found to be the <b>offline channel</b> which accounts for <b>62%</b> of all sales made in Africa during this period. Mozambique created more revenue for Amazon, a total of <b>$3,586,605</b> seconded by Sierra Leone which created a total of <b>$2,868,580</b>. Mozambique ordered more Household items while Sierra Leon ordered more Office Supplies. Office Supplies have also been found to be asking for a higher unit price of <b>$3,256</b> in africa than any other item ordered in Africa. In 2012, units sold per year were very high compared to all other years under study. In 2012, a sum of <b>37, 797</b> were orderd in Africa.</p>
-							<!--<p><strong>Recommendations</strong></p>
-							<p>For our special problem, we were interested in how these different characteristics relate
-								to the total medical cost. We constructed the best possible predictive model 
-								for the cost given some information about the patient.<ol>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-							</ol></p>-->
-							<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
+							<h3>Summary of Findings</h3>
+							<ul>
+								<li>The <b>offline sales channel</b> proved to be the most profitable, 
+									accounting for <b>62%</b> of all Amazon sales in Africa during the period under review.</li>
+								<li><b>Mozambique</b> emerged as the top revenue-generating country, contributing <b>$3,586,605</b>, 
+									followed closely by <b>Sierra Leone</b>, which generated <b>$2,868,580</b> in total revenue.</li>
+								<li>The <b>Office Supplies</b> category had the highest unit price, with an average cost of <b>$3,256</b> per unit.</li>
+								<li>The year <b>2012</b> recorded the highest number of units sold, with a total of <b>37,797</b> orders placed across Africa.</li>
+							</ul>
+							<p style="font-weight: bold; text-align: center;">For more details, please refer to the dashboard by clicking on the following button:</p>
 							<ul class="actions special">
-								<li><a href="https://public.tableau.com/app/profile/mcbrown.mwale/viz/AmazonSalesforAfrica2010-2017/AmazonSales" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
+								<li><a href="https://public.tableau.com/app/profile/mcbrown.mwale/viz/AmazonSalesforAfrica2010-2017/AmazonSales" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">View Dashboard</a></li>
 							</ul>
 							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 						</section>
