Updated my resume

--- a/project_1.html
+++ b/project_1.html
@@ -75,16 +75,10 @@
 								<li>Which product category had the highest unit price among all items sold in Africa?</li>
 								<li>Which year recorded the highest number of units sold?</li>
 							</ul>
-							<!--<p><strong>Methodology</strong></p>
-							<p>For our special problem, we were interested in how these different characteristics relate
-								to the total medical cost. We constructed the best possible predictive model 
-								for the cost given some information about the patient.<ol>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-							</ol></p>-->
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
+							<h3>The Dashboard</h3>
+							<p>For a <b>PDF</b> please <a href="https://drive.google.com/file/d/10n44BMG6wvC-BnHfpLAqu49a8mLeMxgx/view?usp=sharing" style="color: rgb(240, 8, 8);">Click Here.</a></p>
+							<div class="image main"><img src="Images/amazon_db.png" alt="" /></div>
 							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 							<h3>Summary of Findings</h3>
 							<ul>
@@ -95,7 +89,7 @@
 								<li>The <b>Office Supplies</b> category had the highest unit price, with an average cost of <b>$3,256</b> per unit.</li>
 								<li>The year <b>2012</b> recorded the highest number of units sold, with a total of <b>37,797</b> orders placed across Africa.</li>
 							</ul>
-							<p style="font-weight: bold; text-align: center;">For more details, please refer to the dashboard by clicking on the following button:</p>
+							<p style="font-weight: bold; text-align: center;">For an original and interactive version of the Dashboard, click on the following button:</p>
 							<ul class="actions special">
 								<li><a href="https://public.tableau.com/app/profile/mcbrown.mwale/viz/AmazonSalesforAfrica2010-2017/AmazonSales" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">View Dashboard</a></li>
 							</ul>
