made a correction to amazon project

--- a/project_1.html
+++ b/project_1.html
@@ -77,7 +77,7 @@
 							</ul>
 							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 							<h3>The Dashboard</h3>
-							<p>For a <b>PDF</b> please <a href="https://drive.google.com/file/d/10n44BMG6wvC-BnHfpLAqu49a8mLeMxgx/view?usp=sharing" style="color: rgb(240, 8, 8);">Click Here.</a></p>
+							<p>For a <b>PDF</b> please <a href="https://drive.google.com/file/d/10n44BMG6wvC-BnHfpLAqu49a8mLeMxgx/view?usp=sharing" style="color: rgb(240, 8, 8);" target="_blank">Click Here.</a></p>
 							<div class="image main"><img src="Images/amazon_db.png" alt="" /></div>
 							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 							<h3>Summary of Findings</h3>
