--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
+						<img src="Docs/profile-pic (1).png" class="center" width="200" height="200" />
 						<h1>McBrown Mwale</h1>
 						<h2>Data Analyst</h2>
 						<h3>|| Python | SQL | Tableau ||</h3>
