Updated my website

--- a/Resume.html
+++ b/Resume.html
@@ -85,11 +85,10 @@
 								<h3><center>Education</center></h3>
 								<h3><u>Bachelor of Social Sciences (Economics): <a href="" target="_blank" style="color: rgb(5, 46, 160);">Catholic University of Malawi</u></a></h3>
 								<ul>
-									<li>Economics.</li>
-									<li>Mathematical Economics.</li>
-									<li>Econometrics.</li>
-									<li>Statistics.</li>
-									<li>Data Analytics.</li>
+									<li>Acquired strong analytical and quantitative skills through Econometrics and Mathematical Economics.</li>
+									<li>Gained proficiency in Statistics and Data Analytics, applying statistical techniques for insights and forecasting.</li>
+									<li>Developed expertise in data-driven decision-making, economic modelling, and research methodologies.</li>
+									<li>Developed skills in data collection, analysis, and interpretation through courses in Testing and Measurement.</li>
 								</ul>
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/1vP72mMLPgo7KxhdJCHD6KmQ-1wK3s7VA/view?usp=sharing" class="button" target="_blank">Certificate</a>   
@@ -99,37 +98,27 @@
 								<h3><center>Professional Certificates</center></h3>
 								<h3><u>Data Analytics in Python: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
-									<li>Introduction to Python.</li>
-									<li>Intermediate Python, Numpy and Pandas.</li>
-									<li>Data Cleaning in Python.</li>
-									<li>The Command Line.</li>
-									<li>Working with Data Sources Using SQL.</li>
-									<li>APIs and Web Scraping in Python.</li>
-									<li>Probability and Statistics.</li>
-									<li>Git and Version Control.</li>
+									<li>Mastered <b>Python</b> programming for data analysis, including <em>NumPy</em>, <em>Pandas</em>, and <em>Matplotlib</em>.</li>
+									<li>Learned <b>Data Cleaning</b> and <b>Exploratory Data Analysis</b> techniques.</li>
+									<li>Gained experience in <b>SQL</b> for Data Retrieval and <b>API</b> & <b>Web Scraping</b>.</li>
+									<li>Developed skills in Probability, Statistics, and <b>Version Control</b> (Git).</li>
 								</ul>
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/16_wu8gQ1f3H9nXqPs0at3_svcAWhzRnH/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
 								<h3><u>Junior Data Analyst: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
-									<li>Introduction to Data Analysis with Excel.</li>
-									<li>Fundamentals of SQL.</li>
-									<li>Introduction to Python.</li>
-									<li>Data Wrangling and Visualisation in Python.</li>
-									<li>Statistics Fundamentals for Data Analysis in Python.</li>
+									<li>Acquired practical experience in <b>Data Wrangling</b> and <b>Visualization</b> in Python.</li>
+									<li>Developed foundational knowledge in <b>SQL</b>, <b>Excel</b> for Data Analysis, and Statistical Analysis.</li>
 								</ul>
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/19BNJc0p1WVINJS_9IJmOt4J7gGo1I2x4/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
 								<h3><u>Business Analyst with Tableau: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
-									<li>Excel Fundamentals.</li>
-									<li>Fundamentals of SQL.</li>
-									<li>Data Preparation in Tableau.</li>
-									<li>Data Visualisation Fundamentals in Tableau.</li>
-									<li>Visual Analytics in Tableau.</li>
-									<li>Sharing insights in Tableau.</li>
+									<li><b>Core Technical Skills:</b> Gained proficiency in <b>Excel</b> for data manipulation and <b>SQL</b> for querying and managing databases.</li>
+									<li><b>Tableau Expertise:</b> Learned data preparation, visualization fundamentals, and visual analytics to create impactful dashboards and insights.</li>
+									<li><b>Insight Communication:</b> Mastered techniques for effectively sharing and presenting data-driven insights to stakeholders using Tableau.</li>
 								</ul>
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/1H0mpQLjHOeAfe7zg9vv6cIFJIJ7gVFBQ/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
@@ -157,18 +146,21 @@
 									<a href="https://drive.google.com/file/d/1lz-nwmfYsb30ZDeuGlOusBkFH6nreYvT/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>-->
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<h3><center>Tools</center></h3>
+								<h3><center>Technical Skills</center></h3>
 								<ul>
-									<li>Python for Data Analysis [Pandas, Seaborn, statsmodels and scikit-learn].</li>
-									<li>SQL [PostgreSQL & SQLite].</li>
-									<li>Tableau.</li>
-									<li>Excel</li>
+									<li><b>Programming:</b> Python (Pandas, NumPy, Matplotlib, Statsmodels, Scikit-learn)</li>
+									<li><b>Data Analysis & Visualization:</b> Tableau, Excel, Seaborn, SQL (PostgreSQL, SQLite)</li>
+									<li><b>Statistical Analysis & Machine Learning:</b> Regression, Hypothesis Testing, Probability</li>
+									<li><b>Database Management:</b> SQL (Data Querying, Joins, Aggregations)</li>
+									<li><b>Other Tools:</b> Git, Command Line, Microsoft Office (Excel, Word, PowerPoint)</li>
+									<li><b>Soft Skills:</b> Communication, Problem-Solving, Critical Thinking, Team Collaboration</li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<h3><center>Passion</center></h3>
+								<h3><center>Hobbies and Interests</center></h3>
 								<ul>
 									<li>Python programming for Data Analytics.</li>
-									<li>Teaching Mathematics and Data Skills.</li>
+									<li>Data Storytelling and Visualization</li>
+									<li>Continuous Learning & Professional Development</li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 							</section>
