--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<h2><a href="./main_project.html" style="color: deepskyblue;">Predicting Insurance Costs</a></h2>
 									<p><strong> Python </strong></p>
 								</header>
-								<img src="Images/analytics 10.jfif" class="image main" alt="" />
+								<img src="Images/analytics 10.jfif" class="image main" alt="" style="border-radius: 15px;"/>
 								<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b>, <b>Feature Engineering</b>,
 									 <b>Exploratory Data Analysis (EDA)</b>, <b>Regression Modelling</b> and <b>Model Evaluation</b>.</center></p>
 								<ul class="actions special">
@@ -75,7 +75,7 @@
 										<h2><a href="./project_1.html" style="color: deepskyblue;">Amazon Sales for Africa</a></h2>
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
-									<a href="./project_1.html" class="image fit"><img src="Images/amazon_.jfif" alt="" width="200" height="300" /></a>
+									<img src="Images/amazon_.jfif" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
 									<p><center>This project demonstrates proficiency in <b>Data Cleaning</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualisation</b> using <b>Tableau</b>.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_1.html" class="button">View Project</a></li>
@@ -87,7 +87,7 @@
 										<h2><a href="./project_2.html" style="color: deepskyblue;">Ebay Kleinanzein Cars data</a></h2>
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
-									<a href="./project_2.html" class="image fit"><img src="Images/ebay.jpg" alt="" width="200" height="300" /></a>
+									<img src="Images/ebay.jpg" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
 									<p><center>This project demonstrates proficiency in <b>Data Cleaning</b>, 
 										<b>Feature Engineering</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualization</b> using <b>Matplotlib</b>.</center></p>
 									<ul class="actions special">
@@ -100,7 +100,7 @@
 										<h2><a href="./project_3.html" style="color: deepskyblue;">Analysing KickStarter Projects</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
-									<a href="./project_3.html" class="image fit"><img src="Images/Kickstarter.jpg" alt="" width="200" height="300" /></a>
+									<img src="Images/Kickstarter.jpg" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
 									<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b>, 
 										<b>Exploratory Data Analysis</b> and use of <b>Structured Query Language (SQL)</b>.</center></p>
 									<ul class="actions special">
