added links to my resume

--- a/Resume.html
+++ b/Resume.html
@@ -73,7 +73,7 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<h3><center>Experience</center></h3>
-								<h3><u>Data Analyst: <a href="" target="_blank" style="color: rgb(5, 46, 160);">Kasiwa Academy</u></a></h3>
+								<h3><u>Data Analyst: <a href="https://www.youtube.com/@KasiwaAcademy" target="_blank" style="color: rgb(5, 46, 160);">Kasiwa Academy</u></a></h3>
 								<ul>
 									<li>I utilise statistical tools, quality control techniques, and data mining processes to remove inaccuraces, improve reliability and performance of data pipelines.</li>
 									<li>I assist in the analysis of large sets of data resulting in a positive impact on the company's overall performance.</li>
@@ -83,7 +83,7 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<h3><center>Education</center></h3>
-								<h3><u>Bachelor of Social Sciences (Economics): <a href="" target="_blank" style="color: rgb(5, 46, 160);">Catholic University of Malawi</u></a></h3>
+								<h3><u>Bachelor of Social Sciences (Economics): <a href="https://cunima1.online/" target="_blank" style="color: rgb(5, 46, 160);">Catholic University of Malawi</u></a></h3>
 								<ul>
 									<li>Acquired strong analytical and quantitative skills through Econometrics and Mathematical Economics.</li>
 									<li>Gained proficiency in Statistics and Data Analytics, applying statistical techniques for insights and forecasting.</li>
@@ -96,7 +96,7 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<h3><center>Professional Certificates</center></h3>
-								<h3><u>Data Analytics in Python: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
+								<h3><u>Data Analytics in Python: <a href="https://www.dataquest.io/" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
 									<li>Mastered <b>Python</b> programming for data analysis, including <em>NumPy</em>, <em>Pandas</em>, and <em>Matplotlib</em>.</li>
 									<li>Learned <b>Data Cleaning</b> and <b>Exploratory Data Analysis</b> techniques.</li>
@@ -106,7 +106,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/16_wu8gQ1f3H9nXqPs0at3_svcAWhzRnH/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<h3><u>Junior Data Analyst: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
+								<h3><u>Junior Data Analyst: <a href="https://www.dataquest.io/" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
 									<li>Acquired practical experience in <b>Data Wrangling</b> and <b>Visualization</b> in Python.</li>
 									<li>Developed foundational knowledge in <b>SQL</b>, <b>Excel</b> for Data Analysis, and Statistical Analysis.</li>
@@ -114,7 +114,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/19BNJc0p1WVINJS_9IJmOt4J7gGo1I2x4/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<h3><u>Business Analyst with Tableau: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
+								<h3><u>Business Analyst with Tableau: <a href="https://www.dataquest.io/" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
 									<li><b>Core Technical Skills:</b> Gained proficiency in <b>Excel</b> for data manipulation and <b>SQL</b> for querying and managing databases.</li>
 									<li><b>Tableau Expertise:</b> Learned data preparation, visualization fundamentals, and visual analytics to create impactful dashboards and insights.</li>
