--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
 									<img src="Images/ebay.jpg" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
-									<p><center>This project demonstrates proficiency in <b>Data Cleaning</b>, 
+									<p><center>This project demonstrates
+										 proficiency in <b>Data Cleaning</b>, 
 										<b>Feature Engineering</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualization</b> using <b>Matplotlib</b>.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_2.html" class="button">View Project</a></li>
