added CV to my website

--- a/Resume.html
+++ b/Resume.html
@@ -51,7 +51,7 @@
 									
 									<h3>Data Analyst</h3>
 									<p><strong>mcbrownwilfred@yahoo.com</strong></p>
-									<p><a href="https://www.linkedin.com/in/mcbrownmwale" target="_blank"><strong>LinkedIn</strong></a></p>
+									<p><a href="https://drive.google.com/file/d/1M-Jvl3bvAcARvyDliUgSdh1Em5vZaUeP/view?usp=sharing" target="_blank"><strong style="color: deepskyblue;">CV</strong></a></p>
 									<p><strong>+265 888 177 387</strong></p>
 								</header>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
