Removed a Tableau Section from my resume

--- a/Resume.html
+++ b/Resume.html
@@ -114,42 +114,11 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/19BNJc0p1WVINJS_9IJmOt4J7gGo1I2x4/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<h3><u>Business Analyst with Tableau: <a href="https://www.dataquest.io/" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
-								<ul>
-									<li><b>Core Technical Skills:</b> Gained proficiency in <b>Excel</b> for data manipulation and <b>SQL</b> for querying and managing databases.</li>
-									<li><b>Tableau Expertise:</b> Learned data preparation, visualization fundamentals, and visual analytics to create impactful dashboards and insights.</li>
-									<li><b>Insight Communication:</b> Mastered techniques for effectively sharing and presenting data-driven insights to stakeholders using Tableau.</li>
-								</ul>
-								<ul class="action special">
-									<a href="https://drive.google.com/file/d/1H0mpQLjHOeAfe7zg9vv6cIFJIJ7gVFBQ/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
-								</ul>
-								<!--<h3><u>Introduction to Data Analysis with Excel: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
-								<ul>
-									<li>Preparing Data in Excel.</li>
-									<li>Visualising Data in Excel.</li>
-									<li>Exploring Data in Excel.</li>
-									<li>Analysing Data in Excel.</li>
-									<li>Creating Dashboards in Excel.</li>
-								</ul>
-								<ul class="action special">
-									<a href="https://drive.google.com/file/d/1gR9Z5IsF45vJbrQxdm2ZSa3fvrp5pZ9g/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
-								</ul>
-								<h3><u>SQL Fundamentals: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
-								<ul>
-									<li>Introduction to SQL and Databases.</li>
-									<li>Summarising Data in SQL.</li>
-									<li>Combining Tables in SQL.</li>
-									<li>SQL Subqueries.</li>
-									<li>Window Functions in SQL.</li>
-								</ul>
-								<ul class="action special">
-									<a href="https://drive.google.com/file/d/1lz-nwmfYsb30ZDeuGlOusBkFH6nreYvT/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
-								</ul>-->
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<h3><center>Technical Skills</center></h3>
 								<ul>
 									<li><b>Programming:</b> Python (Pandas, NumPy, Matplotlib, Statsmodels, Scikit-learn)</li>
-									<li><b>Data Analysis & Visualization:</b> Tableau, Excel, Seaborn, SQL (PostgreSQL, SQLite)</li>
+									<li><b>Data Analysis & Visualization:</b> SQL (PostgreSQL, SQLite), Matplotlib and Seaborn.</li>
 									<li><b>Statistical Analysis & Machine Learning:</b> Regression, Hypothesis Testing, Probability</li>
 									<li><b>Database Management:</b> SQL (Data Querying, Joins, Aggregations)</li>
 									<li><b>Other Tools:</b> Git, Command Line, Microsoft Office (Excel, Word, PowerPoint)</li>
