--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<img src="Docs/profile-pic (1).png" class="center" width="200" height="200" />
 						<h1>McBrown Mwale</h1>
 						<h2>Data Analyst</h2>
-						<h3>|| Python | SQL | Tableau ||</h3>
+						<h3>|| Python | SQL ||</h3>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
