Changed names of html files and added a new project

--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">February 01, 2025</span>
-									<h2><a href="./main_project.html" style="color: deepskyblue;">Predicting Insurance Costs</a></h2>
+									<span class="date">March 07, 2025</span>
+									<h2><a href="./covid_19.html" style="color: deepskyblue;">Investigating Covid-19 Virus Trends</a></h2>
 									<p><strong> Python </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" style="border-radius: 15px;"/>
-								<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b>, <b>Feature Engineering</b>,
-									 <b>Exploratory Data Analysis (EDA)</b>, <b>Regression Modelling</b> and <b>Model Evaluation</b>.</center></p>
+								<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b> and
+									 <b>Exploratory Data Analysis (EDA)</b>.</center></p>
 								<ul class="actions special">
-									<li><a href="./main_project.html" class="button large">View Project</a></li>
+									<li><a href="./covid_19.html" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -72,19 +72,32 @@
 								<article>
 									<header>
 										<span class="date">February 01, 2025</span>
-										<h2><a href="./project_1.html" style="color: deepskyblue;">Amazon Sales for Africa</a></h2>
-										<p style="text-align: center;"><strong>Tableau</strong></p>
+										<h2><a href="./insurance.html" style="color: deepskyblue;">Amazon Sales for Africa</a></h2>
+										<p style="text-align: center;"><strong>Python</strong></p>
 									</header>
-									<img src="Images/amazon_.jfif" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
-									<p><center>This project demonstrates proficiency in <b>Data Cleaning</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualisation</b> using <b>Tableau</b>.</center></p>
+									<img src="Images/analytics 10.jfif" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
+									<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b>, <b>Feature Engineering</b>,
+										<b>Exploratory Data Analysis (EDA)</b>, <b>Regression Modelling</b> and <b>Model Evaluation</b>.</center></p>
 									<ul class="actions special">
-										<li><a href="./project_1.html" class="button">View Project</a></li>
+										<li><a href="./insurance.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">February 01, 2025</span>
-										<h2><a href="./project_2.html" style="color: deepskyblue;">Ebay Kleinanzein Cars data</a></h2>
+										<h2><a href="./amazon.html" style="color: deepskyblue;">Amazon Sales for Africa</a></h2>
+										<p style="text-align: center;"><strong>Tableau</strong></p>
+									</header>
+									<img src="Images/amazon_.jfif" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
+									<p><center>This project demonstrates proficiency in <b>Data Cleaning</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualisation</b> using <b>Tableau</b>.</center></p>
+									<ul class="actions special">
+										<li><a href="./amazon.html" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">February 01, 2025</span>
+										<h2><a href="./ebay.html" style="color: deepskyblue;">Ebay Kleinanzein Cars data</a></h2>
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
 									<img src="Images/ebay.jpg" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
@@ -92,20 +105,20 @@
 										 proficiency in <b>Data Cleaning</b>, 
 										<b>Feature Engineering</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualization</b> using <b>Matplotlib</b>.</center></p>
 									<ul class="actions special">
-										<li><a href="./project_2.html" class="button">View Project</a></li>
+										<li><a href="./ebay.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">February 01, 2025</span>
-										<h2><a href="./project_3.html" style="color: deepskyblue;">Analysing KickStarter Projects</a></h2>
+										<h2><a href="./kickstarter.html" style="color: deepskyblue;">Analysing KickStarter Projects</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<img src="Images/Kickstarter.jpg" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
 									<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b>, 
 										<b>Exploratory Data Analysis</b> and use of <b>Structured Query Language (SQL)</b>.</center></p>
 									<ul class="actions special">
-										<li><a href="./project_3.html" class="button">View Project</a></li>
+										<li><a href="./kickstarter.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<!--<article>
