added covid_19 project

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<h2><a href="./covid_19.html" style="color: deepskyblue;">Investigating Covid-19 Virus Trends</a></h2>
 									<p><strong> Python </strong></p>
 								</header>
-								<img src="Images/analytics 10.jfif" class="image main" alt="" style="border-radius: 15px;"/>
+								<img src="Images/covid_19.png" class="image main" alt="" style="border-radius: 15px;"/>
 								<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b> and
 									 <b>Exploratory Data Analysis (EDA)</b>.</center></p>
 								<ul class="actions special">
