Edited projects on my portifolio website

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">March 07, 2025</span>
+									<span class="date">March 07<sup>th</sup>, 2025</span>
 									<h2><a href="./covid_19.html" style="color: deepskyblue;">Investigating Covid-19 Virus Trends</a></h2>
 									<p><strong> Python </strong></p>
 								</header>
@@ -71,8 +71,8 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">February 01, 2025</span>
-										<h2><a href="./insurance.html" style="color: deepskyblue;">Amazon Sales for Africa</a></h2>
+										<span class="date">February 01<sup>st</sup>, 2025</span>
+										<h2><a href="./insurance.html" style="color: deepskyblue;">Predicting Insurance Costs</a></h2>
 										<p style="text-align: center;"><strong>Python</strong></p>
 									</header>
 									<img src="Images/analytics 10.jfif" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
@@ -84,7 +84,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">February 01, 2025</span>
+										<span class="date">February 01<sup>st</sup>, 2025</span>
 										<h2><a href="./amazon.html" style="color: deepskyblue;">Amazon Sales for Africa</a></h2>
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
@@ -96,7 +96,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">February 01, 2025</span>
+										<span class="date">February 01<sup>st</sup>, 2025</span>
 										<h2><a href="./ebay.html" style="color: deepskyblue;">Ebay Kleinanzein Cars data</a></h2>
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
@@ -110,7 +110,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">February 01, 2025</span>
+										<span class="date">February 01<sup>st</sup>, 2025</span>
 										<h2><a href="./kickstarter.html" style="color: deepskyblue;">Analysing KickStarter Projects</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
@@ -123,7 +123,7 @@
 								</article>
 								<!--<article>
 									<header>
-										<span class="date">February 01, 2025</span>
+										<span class="date">February 01<sup>st</sup>, 2025</span>
 										<h2><a href="./project_4.html">Bike Share Sales Analysis</a></h2>
 										<p style="text-align: center;"><strong>Excel</strong></p>
 									</header>
