Modified Ebay Sales project

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 								<article>
 									<header>
 										<span class="date">February 01<sup>st</sup>, 2025</span>
-										<h2><a href="./ebay.html" style="color: deepskyblue;">Ebay Kleinanzein Cars data</a></h2>
+										<h2><a href="./ebay_car_sales.html" style="color: deepskyblue;">Ebay Kleinanzein Cars data</a></h2>
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
 									<img src="Images/ebay.jpg" class="image fit" alt="" style="border-radius: 15px;" width="200" height="300"/>
@@ -105,7 +105,7 @@
 										 proficiency in <b>Data Cleaning</b>, 
 										<b>Feature Engineering</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualization</b> using <b>Matplotlib</b>.</center></p>
 									<ul class="actions special">
-										<li><a href="./ebay.html" class="button">View Project</a></li>
+										<li><a href="./ebay_car_sales.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
